2007-04-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/extern/log/log.py (doLog):
	  file -> filePath

2007-04-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/producers/videotest/videotest.py
	  (VideoTest.get_pipeline_string):
	* flumotion/component/producers/videotest/videotest.xml:
	  Booleans should be named actively.  Repent by documenting
	  some other properties.

2007-04-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/pychecker.mk (pychecker, PYCHECKER_OPTIONS):
	  make verbose run output all warnings (or at least, 1000 of them)
	* flumotion/manager/manager.py (Vishnu._workerCreateComponents,
	  Vishnu._workerCreateComponentDelayed, Vishnu.componentAttached,
	  Vishnu.getComponentStates, Vishnu._emptyPlanetCallback):
	* flumotion/service/service.py (Servicer.status, Servicer.clean,
	  Servicer.create):
	* flumotion/worker/worker.py (WorkerMedium.remote_checkElements):
	  More cleanups.
	* misc/pycheckerrc:
	  Admit defeat, there's too many of them.

2007-04-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/extern/Makefile.am:
	  Install correctly.

2007-04-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* po/nl.po:
	  Updated Dutch translation.

2007-04-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/producers/videotest/admin_gtk.py
	  (PatternNode.patternSet):
	* flumotion/ui/fgtk.py (FComboBox.get_column_content,
	  FComboBox.set_enum, FComboBox.set_list):
	* flumotion/ui/glade.py (GladeBacked.__init__):
	* flumotion/wizard/save.py (WizardSaver.handleConsumers):
	* flumotion/wizard/steps.py (FireWire.on_update_output_format):
	* flumotion/wizard/wizard.py (Wizard.getConfig):
	  Various pychecker fixes.

2007-04-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* flumotion/extern/Makefile.am:
	* flumotion/extern/log/log.py (doLog, TwistedLogObserver.__init__,