@@ -1,5 +1,12 @@
 2007-04-15  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* flumotion/extern/log/log.py (getDebug, setPackageScrubList):
+	  add getDebug() ...
+	* flumotion/worker/worker.py (Kindergarten.play):
+	  ... and use it.
+
+2007-04-15  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* flumotion/extern/log/log.py (doLog):
 	  file -> filePath
 
